--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -17,14 +17,14 @@ jobs:
         lfs: true
 
     - name: who-am-i action
-      uses: microsoft/powerplatform-actions/who-am-i@v0
+      uses: microsoft/powerplatform-actions/who-am-i@0.4.0
       with:
         environment-url: 'https://org5cdbc3cc.crm7.dynamics.com'
         user-name: 'admin@M365x023844.onmicrosoft.com'
         password-secret: ${{ secrets.password }}
 
     - name: export-solution action
-      uses: microsoft/powerplatform-actions/export-solution@v0
+      uses: microsoft/powerplatform-actions/export-solution@0.4.0
       with:
         environment-url: 'https://org5cdbc3cc.crm7.dynamics.com'
         user-name: 'admin@M365x023844.onmicrosoft.com'
@@ -33,7 +33,7 @@ jobs:
         solution-output-file: out/exported/ALMLab.zip
 
     - name: unpack-solution action
-      uses: microsoft/powerplatform-actions/unpack-solution@v0
+      uses: microsoft/powerplatform-actions/unpack-solution@0.4.0
       with:
         solution-file: out/exported/ALMLab.zip
         solution-folder: out/solutions/ALMLab
@@ -41,7 +41,7 @@ jobs:
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
-      uses: microsoft/powerplatform-actions/branch-solution@v0
+      uses: microsoft/powerplatform-actions/branch-solution@0.4.0
       with:
         solution-folder: out/solutions/ALMLab
         solution-target-folder: solutions/ALMLab
